syntax = "proto3";

package proto;

option go_package = "ops";

import "google/api/annotations.proto";

message OpsListRequest {
    string service = 1;
}

message OpsListResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
    string version = 2;
    string config = 3;
}

service Operations {
    rpc Ops (OpsListRequest) returns (OpsListResponse) {
        option (google.api.http) = {
			get: "/ops/{service}"
			additional_bindings {
				get: "/ops"
			}
		};
    };
}